# dynamic

./: .gitignore  README.md  dynamic.cabal  stack.yaml
examples/: ex10.js  ex11.js  ex12.js  ex2.js  ex3.js  ex4.js  ex5.js  ex6.js  ex7.js  ex8.js  ex9.js
src/: APrim.hs  AST.hs  Common.hs  Core.hs  Example.hs  Flow.hs  Interpret.hs  Main.hs  Model.hs  Parser.hs  Primitive.hs
src/Core/: Abstract.hs  Coercion.hs  Domain.hs  Flow.hs
src/Dynamic/: Defs.hs  Interpret.hs
src/JS/: AST.hs  Model.hs  Parser.hs
src/Primitive/: Bool.hs  Null.hs  Number.hs  String.hs  Undefined.hs
