name:                dynamic
version:             0.1.1.0
synopsis:            JavaScript Static Analyzer
-- description:
license:             MIT
license-file:        LICENSE
author:              Zhen Zhang
maintainer:          izgzhen@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dynamic
  main-is:             Main.hs
  other-modules:       JS.AST
                       JS.Model
                       JS.Parser
                       Dynamic.Interpret
                       Dynamic.Defs
                       Common
                       Core.Flow
                       Core.Abstract
                       Core.Coercion
                       APrim
                       Primitive
                       Primitive.Bool
                       Primitive.Number
                       Primitive.Undefined
                       Primitive.Null
                       Primitive.String

  default-extensions:  FlexibleInstances
                       MultiParamTypeClasses
                       FlexibleContexts
                       RankNTypes
                       ScopedTypeVariables

  build-depends:       base >=4.9 && <4.10, containers, lens, mtl,
                       language-ecmascript, js-bridge
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fno-warn-incomplete-patterns
